About me e inicio de footer

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -58,10 +58,10 @@
                     <h2>Analista Programador</h2>
                 </header>
 
-                <p>Dos años de carrera donde aprendí varios lenguajes y herramientas
-                    como conceptos del Desarrollo de SoftWare.
+                <p>Dos años de carrera más uno de Proyecto donde aprendí varios lenguajes y herramientas
+                    como conceptos del Desarrollo de Software.
                     <br>
-                    Puedo ser flexible o proactivo, me considero dedicado y bueno a la hora de solucionar problemas
+                    Me considero dedicado y bueno a la hora de solucionar problemas.
                 </p>
 
                 <div class="divbtncontacto">
@@ -173,6 +173,42 @@
                 </div>
             </article>
         </section>
+
+        <div class="abautMeContainer">
+            <h2 class="subtitle">Sobre mi</h2>
+            <p>
+                Curse dos años de carrera más uno de Proyecto Final, al final de cada semestre entragabamos en grupo un
+                proyecto
+                sobre los lenguajes que estudiamos ese semestre.
+                <br>
+                En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un sistema para administrar y
+                gestionar la
+                sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
+                Establecimiento La Palma S.R.L.
+                <br>
+                Actualemente junto a Nicolás estamos desarrollando el Prototipo de un ECommerce, una tienda online de
+                ropa.
+            </p>
+        </div>
+        <footer class="mianFooter">
+            <ul>
+                <li>
+                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer">
+                        <img class="iconFooter" src="/img/whatsapp.webp" alt=""><strong>098 752 041</strong>
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:godoyyolaus07@gmail.com" target="_blank" rel="noopener noreferrer">
+                        <img class="iconFooter" src="/img/gmail.webp" alt=""><strong>Gmail</strong>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/yolausgg/" target="_blank" rel="noopener noreferrer">
+                        <img class="iconFooter" src="/img/linkedin.webp" alt=""><strong>LinkedIn</strong>
+                    </a>
+                </li>
+            </ul>
+        </footer>
         <section>
             <dialog id="dialogGDB">
                 <div class="containerInfo">
@@ -287,7 +323,8 @@
                         </div>
                         <div class="conainerFlechitasCarrusel">
                             <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp" alt="atras">
-                            <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.webp" alt="adelante">
+                            <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.webp"
+                                alt="adelante">
                         </div>
                     </div>
                 </div>
