--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -31,14 +31,14 @@
             </a>
 
             <ul class="nav-menu">
-                <li class="nav-item"><a href="#">Acerca de mí</a></li>
+                <li class="nav-item"><a href="#abouteMe">Acerca de mí</a></li>
                 <li class="nav-item"><a href="#habilidades">Habilidades</a></li>
                 <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
                 <li class="nav-item"><a href="#">Contacto</a></li>
             </ul>
 
             <ul class="dropdown_nav-menu">
-                <li class="nav-item"><a href="#">Acerca de mí</a></li>
+                <li class="nav-item"><a href="#abouteMe">Acerca de mí</a></li>
                 <li class="nav-item"><a href="#habilidades">Habilidades</a></li>
                 <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
                 <li class="nav-item"><a href="#">Contacto</a></li>
@@ -65,7 +65,7 @@
                 </p>
 
                 <div class="divbtncontacto">
-                    <a href="https://www.linkedin.com/in/yolausgg/" class="btn-contacto">Contáctame</a>
+                    <a href="https://wa.link/ngdymq" class="btn-contacto">Contáctame</a>
                 </div>
             </div>
             <figure>
@@ -175,9 +175,9 @@
         </section>
 
         <div class="abautMeContainer">
-            <h2 class="subtitle">Sobre mi</h2>
+            <h2 id="abouteMe" class="subtitle">Acerca de mí</h2>
             <p>
-                Curse dos años de carrera más uno de Proyecto Final, al final de cada semestre entragabamos en grupo un
+                Cursé dos años de carrera más uno de Proyecto Final, al final de cada semestre entragábamos en grupo un
                 proyecto
                 sobre los lenguajes que estudiamos ese semestre.
                 <br>
@@ -186,7 +186,7 @@
                 sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
                 Establecimiento La Palma S.R.L.
                 <br>
-                Actualemente junto a Nicolás estamos desarrollando el Prototipo de un ECommerce, una tienda online de
+                Actualmente junto a Nicolás estamos desarrollando el Prototipo de un ECommerce, una tienda online de
                 ropa.
             </p>
         </div>
