--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -65,7 +65,7 @@
                 </p>
 
                 <div class="divbtncontacto">
-                    <a href="https://wa.link/ngdymq" class="btn-contacto">Contáctame</a>
+                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer" class="btn-contacto">Contáctame</a>
                 </div>
             </div>
             <figure>
