alt's, abaut me

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -34,14 +34,12 @@
                 <li class="nav-item"><a href="#abouteMe">Acerca de mí</a></li>
                 <li class="nav-item"><a href="#habilidades">Habilidades</a></li>
                 <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
-                <li class="nav-item"><a href="#">Contacto</a></li>
             </ul>
 
             <ul class="dropdown_nav-menu">
                 <li class="nav-item"><a href="#abouteMe">Acerca de mí</a></li>
                 <li class="nav-item"><a href="#habilidades">Habilidades</a></li>
                 <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
-                <li class="nav-item"><a href="#">Contacto</a></li>
             </ul>
             <div class="toggle-btn">
                 <i class="fi fi-br-menu-burger"></i>
@@ -58,18 +56,19 @@
                     <h2>Analista Programador</h2>
                 </header>
 
-                <p>Dos años de carrera más uno de Proyecto donde aprendí varios lenguajes y herramientas
-                    como conceptos del Desarrollo de Software.
+                <p>Dos años de carrera más uno de Proyecto donde aprendí varios lenguajes y herramientas,
+                    aparte de conceptos sobre el Desarrollo de Software.
                     <br>
                     Me considero dedicado y bueno a la hora de solucionar problemas.
                 </p>
 
                 <div class="divbtncontacto">
-                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer" class="btn-contacto">Contáctame</a>
+                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer" title="Mandar mensaje por Whatsapp"
+                        class="btn-contacto">Contáctame</a>
                 </div>
             </div>
             <figure>
-                <img id="fotoYolaus" src="img/YolaFotoCV_R.png" alt="Yolaus Godoy">
+                <img id="fotoYolaus" src="img/YolaFotoCV_R.png" alt=" imagen de Yolaus Godoy">
             </figure>
         </section>
 
@@ -79,62 +78,62 @@
 
                 <div class="grid-item">
                     <figure>
-                        <img src="img/HTMLLogo.webp" alt="" class="grid-img">
+                        <img src="img/HTMLLogo.webp" alt="Logo de HTML" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/CSSLogo.webp" alt="" class="grid-img">
+                        <img src="img/CSSLogo.webp" alt="Logo de CSS" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/JSLogo.webp" alt="" class="grid-img">
+                        <img src="img/JSLogo.webp" alt="Logo de JavaSctipt" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/JavaLogo.webp" alt="" class="grid-img">
+                        <img src="img/JavaLogo.webp" alt="Logo de Java" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/CSharpLogo.webp" alt="" class="grid-img">
+                        <img src="img/CSharpLogo.webp" alt="Logo de CSharp" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/SQLServerLogo.webp" alt="" class="grid-img">
+                        <img src="img/SQLServerLogo.webp" alt="Logo de SQLServer" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/MySQLLogo.webp" alt="" class="grid-img">
+                        <img src="img/MySQLLogo.webp" alt="Logo de MySQL" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/ReactLogo.webp" alt="" class="grid-img">
+                        <img src="img/ReactLogo.webp" alt="Logo de React" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/BootstrapLogo.webp" alt="" class="grid-img">
+                        <img src="img/BootstrapLogo.webp" alt="Logo de Bootstrap" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/VSCodeLogo.webp" alt="" class="grid-img">
+                        <img src="img/VSCodeLogo.webp" alt="Logo de Visual Studio Code" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/NetbeansLogo.webp" alt="" class="grid-img">
+                        <img src="img/NetbeansLogo.webp" alt="Logo de Netbeans" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/IIJIDEALogo.webp" alt="" class="grid-img">
+                        <img src="img/IIJIDEALogo.webp" alt="Logo de IIJIDEA" class="grid-img">
                     </figure>
                 </div>
             </article>
@@ -176,35 +175,36 @@
 
         <div class="abautMeContainer">
             <h2 id="abouteMe" class="subtitle">Acerca de mí</h2>
-            <p>
-                Cursé dos años de carrera más uno de Proyecto Final, al final de cada semestre entragábamos en grupo un
-                proyecto
-                sobre los lenguajes que estudiamos ese semestre.
-                <br>
-                En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un sistema para administrar y
-                gestionar la
-                sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
-                Establecimiento La Palma S.R.L.
-                <br>
-                Actualmente junto a Nicolás estamos desarrollando el Prototipo de un ECommerce, una tienda online de
-                ropa.
-            </p>
+            <div>
+                <p>
+                    Cursé dos años de carrera más uno de Proyecto Final, al final de cada semestre entragábamos en grupo
+                    un proyecto sobre los lenguajes estudiados ese semestre.
+                    <br>
+                    En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un sistema para administrar y
+                    gestionar la sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
+                    Establecimiento La Palma S.R.L.
+                    <br>
+                    Actualmente junto a Nicolás estamos desarrollando el Prototipo de un ECommerce, enfocado en una
+                    tienda de ropa.
+                </p>
+                <img class="imgAbautMe" src="/img/YolaFotoCV_R.png" alt="imagen de Yolaus Godoy">
+            </div>
         </div>
         <footer class="mianFooter">
             <ul>
                 <li>
                     <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/whatsapp.webp" alt=""><strong>098 752 041</strong>
+                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de Whatsapp"><strong>098 752 041</strong>
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:godoyyolaus07@gmail.com" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/gmail.webp" alt=""><strong>Gmail</strong>
+                    <a href="mailto:godoyyolaus07@gmail.com" target="_blank" rel="noopener noreferrer" title="godoyyolaus07@gmail.com">
+                        <img class="iconFooter" src="/img/gmail.webp" alt="logo de Gmail"><strong>Gmail</strong>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/yolausgg/" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/linkedin.webp" alt=""><strong>LinkedIn</strong>
+                        <img class="iconFooter" src="/img/linkedin.webp" alt="logo de LinkedIn"><strong>LinkedIn</strong>
                     </a>
                 </li>
             </ul>
@@ -238,8 +238,8 @@
                                 loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasGDB" src="/img/atras.webp" alt="atras">
-                            <img class="derImgCarrusel" id="adelanteGDB" src="/img/atras.webp" alt="adelante">
+                            <img class="izqImgCarrusel" id="atrasGDB" src="/img/atras.webp" alt="flecha atras">
+                            <img class="derImgCarrusel" id="adelanteGDB" src="/img/atras.webp" alt="flecha adelante">
                         </div>
                     </div>
                 </div>
@@ -266,8 +266,8 @@
                                 loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasECommerce" src="/img/atras.webp" alt="atras">
-                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.webp" alt="adelante">
+                            <img class="izqImgCarrusel" id="atrasECommerce" src="/img/atras.webp" alt="flecha atras">
+                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.webp" alt="flecha adelante">
                         </div>
                     </div>
                 </div>
@@ -294,9 +294,9 @@
                         </div>
                         <div class="conainerFlechitasCarrusel">
                             <img class="izqImgCarrusel" id="atrasProyectosDuranteLaCarrera" src="/img/atras.webp"
-                                alt="atras">
+                                alt="flecha atras">
                             <img class="derImgCarrusel" id="adelanteProyectosDuranteLaCarrera" src="/img/atras.webp"
-                                alt="adelante">
+                                alt="flecha adelante">
                         </div>
                     </div>
                 </div>
@@ -322,9 +322,9 @@
                                 alt="Imagen del Carrusel" loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp" alt="atras">
+                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp" alt="flecha atras">
                             <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.webp"
-                                alt="adelante">
+                                alt="flecha adelante">
                         </div>
                     </div>
                 </div>
