--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -63,8 +63,8 @@
                 </p>
 
                 <div class="divbtncontacto">
-                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer" title="Mandar mensaje por Whatsapp"
-                        class="btn-contacto">Contáctame</a>
+                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer"
+                        title="Mandar mensaje por Whatsapp" class="btn-contacto">Contáctame</a>
                 </div>
             </div>
             <figure>
@@ -172,7 +172,6 @@
                 </div>
             </article>
         </section>
-
         <div class="abautMeContainer">
             <h2 id="abouteMe" class="subtitle">Acerca de mí</h2>
             <div>
@@ -189,23 +188,39 @@
                 </p>
                 <img class="imgAbautMe" src="/img/YolaFotoCV_R.png" alt="imagen de Yolaus Godoy">
             </div>
+            <div>
+
+            </div>
         </div>
         <footer class="mianFooter">
             <ul>
                 <li>
                     <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de Whatsapp"><strong>098 752 041</strong>
+                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de Whatsapp"><strong>098 752
+                            041</strong>
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:godoyyolaus07@gmail.com" target="_blank" rel="noopener noreferrer" title="godoyyolaus07@gmail.com">
+                    <a href="mailto:godoyyolaus07@gmail.com" target="_blank" rel="noopener noreferrer"
+                        title="godoyyolaus07@gmail.com">
                         <img class="iconFooter" src="/img/gmail.webp" alt="logo de Gmail"><strong>Gmail</strong>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/yolausgg/" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/linkedin.webp" alt="logo de LinkedIn"><strong>LinkedIn</strong>
+                        <img class="iconFooter" src="/img/linkedin.webp"
+                            alt="logo de LinkedIn"><strong>LinkedIn</strong>
                     </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/yolausgg/" target="_blank" rel="noopener noreferrer">
+                        <img class="iconFooter" src="/img/linkedin.webp" alt="logo de LinkedIn"><strong>CV</strong>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <i class="fa fa-copyright" aria-hidden="true">@copyright yolausgodoy</i>
                 </li>
             </ul>
         </footer>
@@ -267,7 +282,8 @@
                         </div>
                         <div class="conainerFlechitasCarrusel">
                             <img class="izqImgCarrusel" id="atrasECommerce" src="/img/atras.webp" alt="flecha atras">
-                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.webp" alt="flecha adelante">
+                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.webp"
+                                alt="flecha adelante">
                         </div>
                     </div>
                 </div>
@@ -322,7 +338,8 @@
                                 alt="Imagen del Carrusel" loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp" alt="flecha atras">
+                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp"
+                                alt="flecha atras">
                             <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.webp"
                                 alt="flecha adelante">
                         </div>
