--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -212,15 +212,19 @@
                             alt="logo de LinkedIn"><strong>LinkedIn</strong>
                     </a>
                 </li>
+                
+            </ul>
+            <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/yolausgg/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/in/yolausgg/details/featured/1706067846797/single-media-viewer/?profileId=ACoAADlaAqEBVAVSG2v4u_Qh-Q00WF7H-l0EQCw"
+                        title="redireciona al CV en LinkedIn" target="_blank" rel="noopener noreferrer">
                         <img class="iconFooter" src="/img/linkedin.webp" alt="logo de LinkedIn"><strong>CV</strong>
                     </a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <i class="fa fa-copyright" aria-hidden="true">@copyright yolausgodoy</i>
+                    <i class="fa fa-copyright" aria-hidden="true">©Yolaus Godoy - 2024</i>
                 </li>
             </ul>
         </footer>
