cambios de estilo

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -73,7 +73,7 @@
         </section>
 
         <section id="habilidades" class="main-container">
-            <h2 class="subtitle"> Lenguajes, Frameworks y Libresrias</h2>
+            <h2 class="subtitle"> Lenguajes, Frameworks y Librerias</h2>
             <article class="grid">
 
                 <div class="grid-item">
@@ -177,26 +177,21 @@
             <div>
                 <p>
                     Cursé dos años de carrera más uno de Proyecto Final, al final de cada semestre entragábamos en grupo
-                    un proyecto sobre los lenguajes estudiados ese semestre.
+                    un proyecto sobre los lenguajes, herramientas y conceptos estudiados ese semestre.
                     <br>
-                    En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un sistema para administrar y
-                    gestionar la sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
+                    En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un Sistema para Administrar y
+                    Gestionar la Aanidad y la Consanguinidad en Bovinos lecheros de forma sencilla, para el
                     Establecimiento La Palma S.R.L.
                     <br>
-                    Actualmente junto a Nicolás estamos desarrollando el Prototipo de un ECommerce, enfocado en una
-                    tienda de ropa.
                 </p>
                 <img class="imgAbautMe" src="/img/YolaFotoCV_R.png" alt="imagen de Yolaus Godoy">
-            </div>
-            <div>
-
             </div>
         </div>
         <footer class="mianFooter">
             <ul>
                 <li>
                     <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de Whatsapp"><strong>098 752
+                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de WhatsApp"><strong id="stg-WP">+598 98 752
                             041</strong>
                     </a>
                 </li>
@@ -212,7 +207,7 @@
                             alt="logo de LinkedIn"><strong>LinkedIn</strong>
                     </a>
                 </li>
-                
+
             </ul>
             <ul>
                 <li>
@@ -233,9 +228,8 @@
                 <div class="containerInfo">
                     <div class="containerInfoText">
                         <h3 class="titleProyect">Gestión de Bovinos</h3>
-                        <p>Este es el Proyecto Final con el que conseguí junto a mi compañero Nicolas Troche el título
-                            de
-                            Analista Programador.
+                        <p>Este es el Proyecto Final en el que conseguimos junto a mi compañero Nicolas Troche el título
+                            de Analista Programador.
                             <br>
                             En el se desarrolló un sistema para administrar y gestionar la
                             sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
@@ -247,7 +241,7 @@
                             <br>
                             Código y Documentación en el Repositorio.
                         </p>
-                        <a class="btnRepositorio"
+                        <a class="btnRepositorio" target="_blank"
                             href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
 
                     </div>
@@ -276,8 +270,8 @@
                             La idea con este proyecto es ir reafirmando y conociendo nuevos conceptos además de generar
                             experiencia en lo que viene a ser el Desarrollo Web
                         </p>
-                        <a class="btnRepositorio"
-                            href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
+                        <a class="btnRepositorio" target="_blank"
+                            href="https://github.com/YolausGG/ProyectosReact-TrocheGodoy/tree/main">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselECommerce">
@@ -304,7 +298,7 @@
                             <br>
                             La idea con este Repositorio es ir mostrando lo que hice durante la carrera.
                         </p>
-                        <a class="btnRepositorio"
+                        <a class="btnRepositorio" target="_blank"
                             href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
@@ -333,19 +327,13 @@
                             La idea con este Repositorio es que se pueda ver como esta hecho y que si
                             alguien desea, saque ideas o fragmentos del código para su propio uso.
                         </p>
-                        <a class="btnRepositorio"
+                        <a class="btnRepositorio" target="_blank"
                             href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselPortafoliosWeb">
                             <img class="imgCarrusel" src="/img/HerramientasPortafoliosWeb.webp"
                                 alt="Imagen del Carrusel" loading="lazy">
-                        </div>
-                        <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp"
-                                alt="flecha atras">
-                            <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.webp"
-                                alt="flecha adelante">
                         </div>
                     </div>
                 </div>
