--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -57,15 +57,14 @@
                 </header>
 
                 <p>Dos años de carrera más uno de Proyecto donde aprendí varios lenguajes y herramientas,
-                    aparte de conceptos sobre el Desarrollo de Software.
+                    y mas importante, conceptos sobre el Desarrollo de Software.
                     <br>
                     Me considero dedicado y bueno a la hora de solucionar problemas.
                 </p>
 
-                <div class="divbtncontacto">
-                    <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer"
-                        title="Mandar mensaje por Whatsapp" class="btn-contacto">Contáctame</a>
-                </div>
+                <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer"
+                    title="Mandar mensaje por Whatsapp" class="btn-contacto">Contáctame</a>
+
             </div>
             <figure>
                 <img id="fotoYolaus" src="img/YolaFotoCV_R.png" alt=" imagen de Yolaus Godoy">
@@ -77,11 +76,13 @@
             <article class="grid">
 
                 <div class="grid-item">
+                    <h3 class="h3-title-item">HTML</h3>
                     <figure>
                         <img src="img/HTMLLogo.webp" alt="Logo de HTML" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">CSS</h3>
                     <figure>
                         <img src="img/CSSLogo.webp" alt="Logo de CSS" class="grid-img">
                     </figure>
@@ -163,11 +164,11 @@
                             id="btnProyectosDuranteLaCarrera">Más Info.</a>
                     </div>
                 </div>
-                <div id="cardProyectPortafoliosWeb" class="grid-item-proyect">
-                    <h3>Este Portafolios</h3>
+                <div id="cardProyectPortafolioWeb" class="grid-item-proyect">
+                    <h3>Este Portafolio</h3>
                     <div class="div-link-proyect">
-                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('PortafoliosWeb')"
-                            id="btnPortafoliosWeb">Más Info.</a>
+                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('PortafolioWeb')"
+                            id="btnPortafolioWeb">Más Info.</a>
                     </div>
                 </div>
             </article>
@@ -180,7 +181,7 @@
                     un proyecto sobre los lenguajes, herramientas y conceptos estudiados ese semestre.
                     <br>
                     En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un Sistema para Administrar y
-                    Gestionar la Aanidad y la Consanguinidad en Bovinos lecheros de forma sencilla, para el
+                    Gestionar la Sanidad y la Consanguinidad en Bovinos lecheros de forma sencilla, para el
                     Establecimiento La Palma S.R.L.
                     <br>
                 </p>
@@ -191,9 +192,10 @@
             <ul>
                 <li>
                     <a href="https://wa.link/ngdymq" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de WhatsApp"><strong id="stg-WP">+598 98 752
-                            041</strong>
+                        <img class="iconFooter" src="/img/whatsapp.webp" alt="logo de WhatsApp">
+                        <strong id="stg-WP">+598 98 752 041</strong>
                     </a>
+
                 </li>
                 <li>
                     <a href="mailto:godoyyolaus07@gmail.com" target="_blank" rel="noopener noreferrer"
@@ -208,12 +210,19 @@
                     </a>
                 </li>
 
+
             </ul>
             <ul>
                 <li>
                     <a href="https://www.linkedin.com/in/yolausgg/details/featured/1706067846797/single-media-viewer/?profileId=ACoAADlaAqEBVAVSG2v4u_Qh-Q00WF7H-l0EQCw"
                         title="redireciona al CV en LinkedIn" target="_blank" rel="noopener noreferrer">
                         <img class="iconFooter" src="/img/linkedin.webp" alt="logo de LinkedIn"><strong>CV</strong>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/YolausGG" target="_blank" rel="noopener noreferrer">
+                        <img id="icon-github" class="iconFooter" src="/img/iconGitHub.webp"
+                            alt="logo de GitHub"><strong>GitHub</strong>
                     </a>
                 </li>
             </ul>
@@ -316,7 +325,7 @@
                 </div>
                 <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
             </dialog>
-            <dialog id="dialogPortafoliosWeb">
+            <dialog id="dialogPortafolioWeb">
                 <div class="containerInfo">
                     <div class="containerInfoText">
                         <h3 class="titleProyect">Portafolios Web</h3>
@@ -331,8 +340,8 @@
                             href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
-                        <div id="idImgCarruselPortafoliosWeb">
-                            <img class="imgCarrusel" src="/img/HerramientasPortafoliosWeb.webp"
+                        <div id="idImgCarruselPortafolioWeb">
+                            <img class="imgCarrusel" src="/img/HerramientasPortafolioWeb.webp"
                                 alt="Imagen del Carrusel" loading="lazy">
                         </div>
                     </div>
