--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -74,7 +74,6 @@
         <section id="habilidades" class="main-container">
             <h2 class="subtitle"> Lenguajes, Frameworks y Librerias</h2>
             <article class="grid">
-
                 <div class="grid-item">
                     <h3 class="h3-title-item">HTML</h3>
                     <figure>
@@ -88,51 +87,61 @@
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">JavaSctipt</h3>
                     <figure>
                         <img src="img/JSLogo.webp" alt="Logo de JavaSctipt" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">Java</h3>
                     <figure>
                         <img src="img/JavaLogo.webp" alt="Logo de Java" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">C#</h3>
                     <figure>
                         <img src="img/CSharpLogo.webp" alt="Logo de CSharp" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">SQl Server</h3>
                     <figure>
                         <img src="img/SQLServerLogo.webp" alt="Logo de SQLServer" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">MySQL</h3>
                     <figure>
                         <img src="img/MySQLLogo.webp" alt="Logo de MySQL" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">React</h3>
                     <figure>
                         <img src="img/ReactLogo.webp" alt="Logo de React" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">Bootstrap</h3>
                     <figure>
                         <img src="img/BootstrapLogo.webp" alt="Logo de Bootstrap" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">VS Code</h3>
                     <figure>
                         <img src="img/VSCodeLogo.webp" alt="Logo de Visual Studio Code" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">Netbeans</h3>
                     <figure>
                         <img src="img/NetbeansLogo.webp" alt="Logo de Netbeans" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
+                    <h3 class="h3-title-item">IIJIDEA</h3>
                     <figure>
                         <img src="img/IIJIDEALogo.webp" alt="Logo de IIJIDEA" class="grid-img">
                     </figure>
@@ -286,12 +295,7 @@
                         <div id="idImgCarruselECommerce">
                             <img class="imgCarrusel" src="/img/HerramientasEcommerce.webp" alt="Imagen del Carrusel"
                                 loading="lazy">
-                        </div>
-                        <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasECommerce" src="/img/atras.webp" alt="flecha atras">
-                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.webp"
-                                alt="flecha adelante">
-                        </div>
+                        </div>                       
                     </div>
                 </div>
                 <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
@@ -341,8 +345,8 @@
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselPortafolioWeb">
-                            <img class="imgCarrusel" src="/img/HerramientasPortafolioWeb.webp"
-                                alt="Imagen del Carrusel" loading="lazy">
+                            <img class="imgCarrusel" src="/img/HerramientasPortafolioWeb.webp" alt="Imagen del Carrusel"
+                                loading="lazy">
                         </div>
                     </div>
                 </div>
