cerrar navbar, redirección CV y Diploma

--- a/index.html
+++ b/index.html
@@ -223,9 +223,14 @@
             </ul>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/yolausgg/overlay/1714682502941/single-media-viewer/?profileId=ACoAADlaAqEBVAVSG2v4u_Qh-Q00WF7H-l0EQCw"
+                    <a href="https://drive.google.com/file/d/10ltS0GobEU76BHrHknmbbtuy5rdPucW3/view?usp=drive_link"
                         title="redireciona al CV en LinkedIn" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="img/linkedin.webp" alt="logo de LinkedIn"><strong>CV</strong>
+                        <img class="iconFooter" src="img/drive.webp" alt="logo de LinkedIn"><strong>CV</strong>
+                    </a>
+                </li><li>
+                    <a href="https://drive.google.com/file/d/10mItUNSLkbBv7xhJgBRCGTaTDOW0VHYP/view?usp=drive_link"
+                        title="redireciona al CV en LinkedIn" target="_blank" rel="noopener noreferrer">
+                        <img class="iconFooter" src="img/drive.webp" alt="logo de LinkedIn"><strong>Diploma</strong>
                     </a>
                 </li>
                 <li>
