--- a/index.html
+++ b/index.html
@@ -214,22 +214,20 @@
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/yolausgg/" target="_blank" rel="noopener noreferrer">
-                        <img class="iconFooter" src="img/linkedin.webp"
-                            alt="logo de LinkedIn"><strong>LinkedIn</strong>
+                        <img class="iconFooter" src="img/linkedin.webp" alt="logo de LinkedIn"><strong>LinkedIn</strong>
                     </a>
                 </li>
-
-
             </ul>
             <ul>
                 <li>
-                    <a href="https://drive.google.com/file/d/10ltS0GobEU76BHrHknmbbtuy5rdPucW3/view?usp=drive_link"
-                        title="redireciona al CV en LinkedIn" target="_blank" rel="noopener noreferrer">
+                    <a href="https://drive.google.com/file/d/10ltS0GobEU76BHrHknmbbtuy5rdPucW3/view?usp=drive_link" title="CV en Drive" target="_blank"
+                        rel="noopener noreferrer">
                         <img class="iconFooter" src="img/drive.webp" alt="logo de LinkedIn"><strong>CV</strong>
                     </a>
-                </li><li>
+                </li>
+                <li>
                     <a href="https://drive.google.com/file/d/10mItUNSLkbBv7xhJgBRCGTaTDOW0VHYP/view?usp=drive_link"
-                        title="redireciona al CV en LinkedIn" target="_blank" rel="noopener noreferrer">
+                        title="Diploma en Drive" target="_blank" rel="noopener noreferrer">
                         <img class="iconFooter" src="img/drive.webp" alt="logo de LinkedIn"><strong>Diploma</strong>
                     </a>
                 </li>
@@ -240,7 +238,7 @@
                     </a>
                 </li>
             </ul>
-            <ul>
+            <ul>                
                 <li>
                     <i class="fa fa-copyright" aria-hidden="true">©Yolaus Godoy - 2024</i>
                 </li>
@@ -300,7 +298,7 @@
                         <div id="idImgCarruselECommerce">
                             <img class="imgCarrusel" src="img/HerramientasEcommerce.webp" alt="Imagen del Carrusel"
                                 loading="lazy">
-                        </div>                       
+                        </div>
                     </div>
                 </div>
                 <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
